--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <title>Test</title>
 <body>
+    
     <h1>HELLO USER</h1>
+    <a href="https://www.google.com">Google</a>
+    <a href="https://portal.azure.com">Azure portal</a>
+    <a href="https://www.youtube.com">Youtube</a>
 </body>
 </html>
