--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
     
     <h1>HELLO USER</h1>
-    <a href="https://www.google.com">Google</a>
-    <a href="https://portal.azure.com">Azure portal</a>
-    <a href="https://www.youtube.com">Youtube</a>
+    <h2><a href="https://www.google.com">Google</a></h2>
+    <h2><a href="https://portal.azure.com">Azure portal</a></h2>
+    <h2><a href="https://www.youtube.com">Youtube</a></h2>
 </body>
 </html>
